java-only business logic. QR detection works again